packages/components/radio/style/index.less
@import '../../style/mixins/reset.less';
@import './mixin.less';

.@{radio-prefix} {
  .reset-component();

  position: relative;
  display: inline-flex;
  align-items: center;
  font-size: @radio-font-size-md;
  line-height: @radio-line-height;
  color: @radio-color;
  cursor: pointer;

  &-input {
    position: relative;
    display: inline-block;
    line-height: 1;

    &-inner {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      opacity: 0;
      z-index: @radio-inner-zindex;
      cursor: pointer;
    }

    &-box {
      position: relative;
      display: block;
      width: @radio-box-size;
      height: @radio-box-size;
      background-color: @radio-background-color;
      border: @radio-border-width @radio-border-style @radio-border-color;
      border-radius: @radio-box-border-radius;
      transition: @radio-transition;

      &::after {
        position: absolute;
        top: ((@radio-box-size - @radio-dot-size) / 2) - @radio-border-width;
        left: ((@radio-box-size - @radio-dot-size) / 2) - @radio-border-width;
        width: @radio-dot-size;
        height: @radio-dot-size;
        background-color: @radio-active-color;
        border-radius: @radio-dot-size;
        transform: scale(0);
        opacity: 0;
        transition: @radio-transition;
        content: '';
      }
    }
  }

  &-label {
    padding: @radio-label-padding;
  }

  &:hover:not(&-disabled) &-input-box {
    border-color: @radio-hover-color;
  }

  &&-focused:not(&-disabled) &-input-box {
    border-color: @radio-focus-color;
  }

  &-checked {
    .@{radio-prefix} {

      &-input {

        &-box {
          border-color: @radio-active-color;

          &::after {
            transform: scale(1);
            opacity: 1;
            transition: @radio-transition;
          }
        }
      }
    }
  }

  &-disabled {
    cursor: not-allowed;
    color: @radio-disabled-color;

    .@{radio-prefix}-input {

      &-inner {
        cursor: not-allowed;
      }

      &-box {
        background-color: @radio-disabled-background-color;
        border-color: @radio-disabled-color;

        &::after {
          background-color: @radio-disabled-color;
        }
      }
    }
  }
}

.@{radio-prefix}-button {
  display: inline-block;
  background: @radio-background-color;
  border: @radio-border-width @radio-border-style @radio-border-color;
  border-radius: @radio-border-radius;
  transition: @radio-transition;

  .@{radio-prefix} {

    &-input {
      position: absolute;
      top: 0;
      left: 0;
      z-index: -1;
      width: 100%;
      height: 100%;

      &-inner {
        width: 0;
        height: 0;
        pointer-events: none;
      }
    }

    &-label {
      padding: 0;
    }
  }

  &:not(.@{radio-prefix}-disabled):hover {
    color: @radio-hover-color;
  }

  &:not(.@{radio-prefix}-disabled).@{radio-prefix}-focused {
    color: @radio-focus-color;
  }

  &.@{radio-prefix}-checked {
    z-index: 1;
    color: @radio-active-color;
    border-color: @radio-active-color;

    &:not(.@{radio-prefix}-disabled):hover {
      border-color: @radio-hover-color;
    }
  }

  &.@{radio-prefix}-primary.@{radio-prefix}-checked {
    color: @radio-background-color;
    background: @radio-active-color;
    border-color: @radio-active-color;

    &:not(.@{radio-prefix}-disabled):hover {
      background: @radio-hover-color;
      border-color: @radio-hover-color;
    }
  }

  &.@{radio-prefix}-disabled.@{radio-prefix}-checked {
    color: @radio-disabled-color;
    background-color: @radio-disabled-background-color;
    border-color: @radio-border-color;
  }

  &.@{radio-prefix}-sm {
    .radio-size(@radio-height-sm, @radio-font-size-sm, @radio-padding-horizontal-sm);
  }

  &.@{radio-prefix}-md {
    .radio-size(@radio-height-md, @radio-font-size-md, @radio-padding-horizontal-md);
  }

  &.@{radio-prefix}-lg {
    .radio-size(@radio-height-lg, @radio-font-size-lg, @radio-padding-horizontal-lg);
  }
}

.@{radio-group-prefix} {
  display: inline-flex;
  align-items: center;
  flex-wrap: wrap;

  .@{radio-prefix} {

    &:not(&-button):not(:last-child) {
      margin-right: @radio-group-item-margin-right;
    }

    &-button {
      border-right-width: 0;
      border-radius: 0;

      &:first-child {
        border-radius: @radio-border-radius 0 0 @radio-border-radius;
      }

      &:last-child {
        border-radius: 0 @radio-border-radius @radio-border-radius 0;
        border-right-width: @radio-border-width;
      }

      &:not(:last-child)::before {
        position: absolute;
        top: -@radio-border-width;
        right: -@radio-border-width;
        display: block;
        box-sizing: content-box;
        width: @radio-border-width;
        height: 100%;
        padding: @radio-border-width 0;
        background-color: @radio-border-color;
        transition: @radio-transition;
        content: '';
      }

      &.@{radio-prefix}-checked:not(.@{radio-prefix}-disabled) {

        &::before {
          background-color: @radio-active-color;
        }
      }
    }
  }

  &-no-gap {
    .@{radio-prefix} {

      &:not(&-button):not(:last-child) {
        margin-right: @radio-group-item-margin-right;
      }

      &-button {
        border-right-width: 0;
        border-radius: 0;

        &:first-child {
          border-radius: @radio-border-radius 0 0 @radio-border-radius;
        }

        &:last-child {
          border-radius: 0 @radio-border-radius @radio-border-radius 0;
          border-right-width: @radio-border-width;
        }

        &:first-child:last-child {
          border-radius: @radio-border-radius;
        }

        &.@{radio-prefix}-checked:not(.@{radio-prefix}-disabled) {
          & + .@{radio-prefix}-button {
            border-left-color: @radio-active-color;
          }

          &:hover + .@{radio-prefix}-button {
            border-left-color: @radio-hover-color;
          }
        }
      }
    }
  }
}

